--- a/privacy.html
+++ b/privacy.html
@@ -6,7 +6,7 @@
   <title>Privacy Policy - MagicCutBG</title>
   <style>
     body{font-family:Inter,Arial,sans-serif;margin:28px;background:#fafaff;color:#222}
-    .card{max-width:900px;margin:24px auto;padding:22px;background:#fff;border-radius:12px;box-shadow:0 10px 30px rgba(30,20,80,0.04)}
+    .card{max-width:900px;margin:24px auto;padding:28px;background:#fff;border-radius:12px;box-shadow:0 16px 40px rgba(30,20,80,0.06)}
     h1{margin-top:0;color:#6a5cff}
     p{line-height:1.6;color:#444}
     a{color:#6a5cff}
@@ -15,7 +15,7 @@
 <body>
   <div class="card">
     <h1>Privacy Policy</h1>
-    <p>MagicCutBG respects your privacy. This demo app does not store images or sensitive data on the client. For the production app we'll keep API keys on a secure server and only store minimal subscription data as needed. For full policy details add your legal text here.</p>
+    <p>MagicCutBG respects your privacy. This demo app does not store images on the client. In production, uploaded images and subscription info will be handled on a secure server and only minimal data will be retained as required for billing and support. API keys and secrets will never be placed in client code.</p>
     <p>Repository: <a href="https://github.com/zeeali2600-ship-it/magiccutbg-site" target="_blank" rel="noopener">zeeali2600-ship-it/magiccutbg-site</a></p>
     <p><a href="/">Back to app</a></p>
   </div>
